# Mangatan

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: core-rust.yml  optional-rust.yml  publish.yml  publish_android.yml
crates/anki-server/src/: lib.rs
crates/ocr-server/: Cargo.toml
crates/ocr-server/src/: handlers.rs  jobs.rs  lib.rs  logic.rs  merge.rs  state.rs
crates/ocr-server/tests/: merge_regression.rs  validate_submission.rs
crates/yomitan-server/: Cargo.toml
crates/yomitan-server/src/: import.rs  lookup.rs  state.rs
ocr-server/: deno.json  server.ts
