[workspace]
default-members = ["bin/mangatan"]
members = ["bin/mangatan", "bin/mangatan_android", "crates/core", "crates/ocr-server"]
resolver = "2"

[workspace.package]
authors = ["https://github.com/KolbyML/Mangatan/graphs/contributors"]
edition = "2024"
keywords = [
    "manga",
    "suwayomi",
    "ocr",
    "language learning",
    "japanese",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/KolbyML/Mangatan"
rust-version = "1.88.0"
version = "0.1.0"

[workspace.lints.clippy]
let_and_return = "warn"
uninlined_format_args = "warn"
unnecessary_debug_formatting = "warn"
unwrap_used = "warn"
useless_let_if_seq = "warn"
wildcard_imports = "warn"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8.7", features = ["macros", "multipart"] }
base64 = "0.22"
bytes = "1.11"
chrome_lens_ocr = "0.2"
directories = "6.0"
eframe = "0.33"
futures = "0.3.23"
futures-util = "0.3.23"
image = "0.25"   
mime_guess = "2.0"
open = "5.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
rust-embed = "8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.34"     
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
zip = "6.0"

# Internal Dependencies
mangatan-core = { path = "crates/core" }
mangatan-ocr-server = { path = "crates/ocr-server" }

[profile.test]
inherits = "release"
