[package]
name = "mangatan-ocr-server"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true 
avif-decode.workspace = true
axum.workspace = true 
base64.workspace = true 
bytes.workspace = true 
chrome_lens_ocr.workspace = true 
image.workspace = true 
reqwest.workspace = true 
serde.workspace = true 
futures.workspace = true
serde_json .workspace = true 
tokio.workspace = true 
tracing.workspace = true 

[lints]
workspace = true
